--- a/client/pubspec.yaml
+++ b/client/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
     sdk: flutter
 
   dio:
+  jiffy: ^4.1.0
 
 
   # The following adds the Cupertino Icons font to your application.
