--- a/client/pubspec.yaml
+++ b/client/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
 
   dio:
   jiffy: ^4.1.0
+  google_fonts: ^2.0.0
 
 
   # The following adds the Cupertino Icons font to your application.
