--- a/client/pubspec.yaml
+++ b/client/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   jiffy: ^4.1.0
   google_fonts: ^2.0.0
   shared_preferences: ^2.0.5
+  splashscreen: ^1.3.5
 
 
   # The following adds the Cupertino Icons font to your application.
